changed the color theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
             <h3>Ndzi Forninwe Nfor</h3>
             <p>FullStack Developer</p>
-            <h3>Great Soppo, Buea</h3>
+            <h3>South West Region, Cameroon</h3>
         </div>
     </div> 
 </body>
